# OpenXR-Quest-sample

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/xyz/znix/xrtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/input/: hellovr_actions.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/hello_openvr_vulkan/: hellovr_opengl_main.cpp  hellovr_vulkan_main.cpp  xrandroid.cpp  xrandroid.h
app/src/main/cpp/hello_xr/: CMakeLists-dis.txt  graphicsplugin_opengles.cpp  pch.h
app/src/main/cpp/hello_xr/common/: gfxwrapper_opengl.c  gfxwrapper_opengl.h
app/src/main/java/xyz/znix/xrtest/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/xyz/znix/xrtest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
libs-3rdparty/OculusOpenXR/: README.md
